--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -1456,11 +1456,51 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : .................................................................................
-   : ----------------------------------------------------------------------
-   : Ran 81 tests in 0.009s
-   : 
-   : OK
+   #+begin_example
+   ...................................................................................................................................E........
+   ======================================================================
+   ERROR: test_simple_behaviour (tests.test_built-in_functions.TestProperty)
+   ----------------------------------------------------------------------
+   Traceback (most recent call last):
+     File "/usr/local/share/DVCS/org-pub/tests/test_built-in_functions.py", line 820, in test_simple_behaviour
+       self.assertEqual(self.obj_1.x, self.obj_2.x)
+     File "/usr/local/share/DVCS/org-pub/tests/test_built-in_functions.py", line 794, in x
+       return self._x
+   AttributeError: 'C' object has no attribute '_x'
+
+   ----------------------------------------------------------------------
+   Ran 140 tests in 0.107s
+
+   FAILED (errors=1)
+   Help on class zip in module builtins:
+
+   class zip(object)
+    |  zip(iter1 [,iter2 [...]]) --> zip object
+    |  
+    |  Return a zip object whose .__next__() method returns a tuple where
+    |  the i-th element comes from the i-th iterable argument.  The .__next__()
+    |  method continues until the shortest iterable in the argument sequence
+    |  is exhausted and then it raises StopIteration.
+    |  
+    |  Methods defined here:
+    |  
+    |  __getattribute__(self, name, /)
+    |      Return getattr(self, name).
+    |  
+    |  __iter__(self, /)
+    |      Implement iter(self).
+    |  
+    |  __new__(*args, **kwargs) from builtins.type
+    |      Create and return a new object.  See help(type) for accurate signature.
+    |  
+    |  __next__(self, /)
+    |      Implement next(self).
+    |  
+    |  __reduce__(...)
+    |      Return state information for pickling.
+
+   Hellow World
+#+end_example
 
 
 * Conclusion
