--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -102,6 +102,18 @@ tags: [coding, algorithms]
     [9, '1', '9', '1', '9', '1', '9', '1', '9', '1', '9']
 #+end_example
 
+*** Seeking for the sequences
+    - Static are 0, 1, 5, 6
+      - 0 as an order determiner has deviation from general
+	rule
+    - Periodic are 2, 3, 4, 7, 8, 9
+      - 2: [2, 4, 6, 8]
+      - 3: [3, 9, 7, 1]
+      - 4: [4, 6, 4]
+      - 7: [7, 9, 3, 1]
+      - 8: [8, 4, 2, 6]
+      - 9: [9, 1]
+
 ** TestSuite
    #+BEGIN_SRC python :results output :tangle tests/test_toy_samples.py :exports code
      import unittest
