--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -114,6 +114,19 @@ tags: [coding, algorithms]
       - 8: [8, 4, 2, 6]
       - 9: [9, 1]
 
+*** Entire meta-data
+    For simplification purposes lets create a full set of rules.
+      - 0: [0, 0]
+      - 1: [1, 1]
+      - 2: [2, 4, 6, 8]
+      - 3: [3, 9, 7, 1]
+      - 4: [4, 6, 4]
+      - 5: [5, 5]
+      - 6: [6, 6]
+      - 7: [7, 9, 3, 1]
+      - 8: [8, 4, 2, 6]
+      - 9: [9, 1]
+
 ** TestSuite
    #+BEGIN_SRC python :results output :tangle tests/test_toy_samples.py :exports code
      import unittest
