--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -127,6 +127,36 @@ tags: [coding, algorithms]
       - 8: [8, 4, 2, 6]
       - 9: [9, 1]
 
+*** Predict sequence
+    #+BEGIN_SRC python :results output :pp :exports both
+      def seq0(num):
+          return 0
+
+      def seq1(num):
+          return 1
+
+      def seq2(num):
+          if num > 0:
+              s = [2, 4, 8, 6]
+              if num < 5:
+                  return s[num-1]
+              else:
+                  return s[num % 4 - 1]
+          else:
+              return 1
+
+      assert(seq1(22) == 1)
+      assert(seq0(100) == 0)
+      assert(seq2(2) == 4)
+      assert(seq2(4) == 6)
+      assert(seq2(5) == 2)
+      assert(seq2(10) == 4)
+      print('Tests passed')
+    #+END_SRC
+
+    #+RESULTS:
+    : Tests passed
+
 ** TestSuite
    #+BEGIN_SRC python :results output :tangle tests/test_toy_samples.py :exports code
      import unittest
