--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -175,6 +175,32 @@ tags: [coding, algorithms]
     #+RESULTS:
     : 11
 
+
+*** Ties these snippets together
+    #+BEGIN_SRC python :results output :pp :exports both
+      def seq0(num):
+          return 0
+
+      def seq1(num):
+          return 1
+
+      def seq2(num):
+          if num > 0:
+              s = [2, 4, 8, 6]
+              if num < 5:
+                  return s[num-1]
+              else:
+                  return s[num % 4 - 1]
+          else:
+              return 1
+
+      def func_gen(k, n):
+          list_of_functions = [seq0(n), seq1(n), seq2(n)]
+          return list_of_functions[k]
+
+      assert(func_gen(2, 10) == 4)
+      print('It works!')
+    #+END_SRC
 ** TestSuite
    #+BEGIN_SRC python :results output :tangle tests/test_toy_samples.py :exports code
      import unittest
