--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -253,6 +253,21 @@ tags: [coding, algorithms]
     : It works!
     : It works! also
 
+* #3 How many times does it contain?
+
+** Description
+   #+BEGIN_QUOTE
+   Your task is to return how many times a string
+   contains a given character.
+
+   The function takes a string(inputS) as a paremeter
+   and a char(charS) which is the character that you
+   will have to find and count.
+
+   For example, if you get an input string "Hello world"
+   and the character to find is "o", return 2.
+   #+END_QUOTE
+
 * TestSuite
   #+BEGIN_SRC python :results output :tangle tests/test_toy_samples.py :exports code
     import unittest
