--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -228,24 +228,14 @@ tags: [coding, algorithms]
           else:
               return 1
 
-      def func_gen(k, n):
+      def last_digit(k, n):
           list_of_functions = [seq0(n), seq1(n), seq2(n)]
           return list_of_functions[k]
 
-      assert(func_gen(2, 10) == 4)
+      assert(last_digit(2, 10) == 4)
       print('It works!')
-
-      def last_digit(a, b):
-          # last_digit_in_number = int(str(a)[-1])
-          # print(last_digit_in_number)
-          # last_digit_in_order = int(str(b)[-1])
-          # print(last_digit_in_order)
-          return func_gen(a, b) #last_digit_in_number, last_digit_in_order)
-
       assert(last_digit(2, 11) == 8)
       assert(last_digit(1, 10) == 1)
-      # print(func_gen(2, 10))
-      # print(func_gen(2, 11))
       print('It works! also')
     #+END_SRC
 
